Closed Bug 1046473 Opened 10 years ago Closed 10 years ago

webgl-1.0.3 Conformance Failure webgl-depth-texture.html

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: wlitwinczyk, Assigned: wlitwinczyk)

Details

Attachments

(1 file)

This test works in FF31, but not in Nightly:

https://www.khronos.org/registry/webgl/sdk/tests/conformance/extensions/webgl-depth-texture.html

A bisect determines that this was the cause:

http://hg.mozilla.org/mozilla-central/rev/4774bb540acc

Although, it's not really the fault of the above commit. texSubImage2D never actually checks whether or not a depth format is being used (in the above patch or previously). It happened to be a coincidence that ValidateTexImage() would find an error at:

http://dxr.mozilla.org/mozilla-central/source/dom/canvas/WebGLContextValidate.cpp?from=validateTexImage#1325

I'm not entirely sure what in the above commit caused this error to no longer happen, as it's mostly just renaming and moving functionality around. Regardless, texSubImage2D should check for a depth format being used, as all the other functions listed here (under the section Errors)  do:

http://www.khronos.org/registry/webgl/extensions/WEBGL_depth_texture/

=====================================================================

The previous error that was being reported was:

> Error: WebGL: texSubImage2D: format or type doesn't match the 
> existing texture webgl-test-utils.js

Which is not the immediate problem, the other functions report more informative errors:

> Error: WebGL: copyTexSubImage2D: a base internal format of 
> DEPTH_COMPONENT or DEPTH_STENCIL isn't supported webgl-test-utils.js
Attachment #8465119 - Flags: review?(jgilbert)
I've had a few issues with things falling through the cracks. What happens is that we might get a sized version instead of GL_DEPTH_COMPONENT, for example. There's another round of refactoring these checks coming in the WebGL 2 work that I'm currently doing to support 3D textures.
Attachment #8465119 - Flags: review?(jgilbert) → review+
try run?
Try passes
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/8eafe6b4183b
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: