Bug 1046473 - WebGL generates invalid operation errors when using a depth/stencil format on incompatible functions. r=kamidphish